@@ -2,6 +2,8 @@ ver 0.19.14 (not yet released)
 * decoder
   - dsdiff: fix off-by-one buffer overflow
   - opus: limit tag size to 64 kB
+* archive
+  - iso9660: fix buffer overflow
 * fix build failures on non-glibc builds due to constexpr Mutex
 
 ver 0.19.13 (2016/02/23)
